--- a/styles.css
+++ b/styles.css
@@ -14,9 +14,10 @@ body {
 
 .container {
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
   align-items: center;
-  max-width: 400px;
+  max-width: 500px;
 }
 
 .square {
@@ -26,4 +27,8 @@ body {
   margin: 2px;
   box-shadow: 0 0 2px #111111;
   transition: 2s ease;
+}
+
+.square:hover {
+  transition-duration: 0s;
 }
